more lots of updates more

--- a/ninetypercent/details/templates/base.html
+++ b/ninetypercent/details/templates/base.html
@@ -10,23 +10,25 @@
     <link rel="stylesheet" type="text/css" href='{% static "details/style/direct-body.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "details/style/direct-headfoot.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "details/style/animations.css" %}'>
-    <link rel="shortcut icon" type="image/x-icon" href='{% static "details/images/favicon.ico" %}'>
-    <link rel="stylesheet" href='{% static "details/style/bootstrap.min.css" %}'>
-    <link rel="stylesheet" href='{% static "details/style/style.css" %}'>
-    <link rel="stylesheet" href='{% static "details/style/header1.css" %}'>
-    <link rel="stylesheet" href='{% static "details/style/responsive.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/bootstrap.min.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/style.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/header1.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/responsive.css" %}'>
     <link rel="shortcut icon" type="image/x-icon" href='{% static "details/images/favicon.ico" %}'>
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href='{% static "details/style/font-awesome.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/font-awesome.css" %}'>
     <!--[if IE 7]>
     <link rel="stylesheet" href='{% static "details/style/font-awesome-ie7.min.css" %}'>
     <![endif]-->
     <!-- CSS Theme -->
-    <link rel="stylesheet" href='{% static "details/style/orange.css" %}' id="style_color">
-    <link rel="stylesheet" href='{% static "details/style/header1-orange.css" %}' id="style_color-header-1">
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/orange.css" %}' id="style_color">
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/header1-orange.css" %}' id="style_color-header-1">
+
+    <link rel="stylesheet" type="text/css" href='{% static "details/style/details.css" %}'>
 
     <script type="text/javascript" src='{% static "details/js/jquery-1.10.2.min.js" %}'></script>
     <script type="text/javascript" src='{% static "details/js/bootstrap.min.js" %}'></script>
+    <script type="text/javascript" src='{% static "details/js/details.js" %}'></script>
     {% block extra_js %} {% endblock %}
 </head>
 
